# neo-says

./: .dockerignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  install.sh  mkdocs.yml  neo_says.py  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  quote-submission.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
Formula/: neo-says.rb
completions/: _neo-says  neo-says.bash  neo-says.fish
data/: quotes.json  quotes_ja.json  quotes_ko.json
docs/: api-reference.md  configuration.md  contributing.md  getting-started.md  index.md  plugins.md  themes.md
docs/stylesheets/: extra.css
sample-packs/: crypto-bro.yaml  devops-wisdom.yaml  startup-life.yaml
scripts/: demo_gif.py  setup-motd.sh
src/neo_says/: __init__.py  __main__.py  cli.py  config.py  favorites.py  formatter.py  packs.py  quotes.py  themes.py  tui.py
src/neo_says/server/: __main__.py  app.py
tests/: test_cli.py  test_config.py  test_favorites.py  test_formatter.py  test_i18n.py  test_packs.py  test_quotes.py  test_server.py  test_themes.py  test_tui.py
