[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neo-says"
version = "4.0.0"
description = "A snarky CLI fortune teller for developers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    {name = "mongsill6"},
]
dependencies = [
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.11'",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Fortune Cookies",
]

[project.urls]
Homepage = "https://github.com/mongsill6/neo-says"
Repository = "https://github.com/mongsill6/neo-says"

[project.scripts]
neo-says = "neo_says.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py38"
